# geogessr_app

./: geo_data.json  geo_data.yaml  pyproject.toml  workspace.code-workspace
data/: gdp_per_capita.csv
geogessr_app/: geogessr_app.py
geogessr_app/config/: char_config.py  data_processor.py  field_config.py  number_plate_config.py  street_config.py
