[tool.poetry]
name = "geogessr-app"
version = "0.1.0"
description = ""
authors = ["tyaso777 <49575436+tyaso777@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.45.1"
folium = "^0.19.6"
streamlit-folium = "^0.25.0"
numpy = "^2.2.6"


[tool.poetry.group.dev.dependencies]
notebook = "^7.4.3"
ipykernel = "^6.29.5"
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.16.0"
isort = "^6.0.1"
pytest = "^8.3.5"
pip-licenses = "^5.0.0"
pip-audit = "^2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
